--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "@babel/core": "^7.15.8",
     "@babel/plugin-transform-runtime": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
+    "@babel/preset-flow": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
     "@babel/register": "^7.15.3",
     "@babel/runtime": "^7.12.5",
     "@babel/runtime-corejs2": "^7.15.4",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/react-native": "^8.0.0",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "riteway": "^6.3.1"
   },
   "jest": {
     "preset": "react-native"
